[package]
name = "paco_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
rayon = "1.8"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
